--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ section {
     background-color: #F8F9FA;
     margin-left: -30px;
     transition: 0.5s;
+    margin-top: -20px;
+    width: 170px;
 }
 #link-header-left {
     color: #312512;
@@ -34,6 +36,7 @@ section {
     border-right: 1px solid;
     background-color: #F8F9FA;
     transition: 0.5s;
+    margin-top: -20px;
 }
 .w-100 {
     width: 100%!important;
@@ -81,6 +84,11 @@ section#footer {
 div#menu-header {
     width: 100%;
     align-items: center;
+    height: 0;
+}
+div#logo-header {
+    width: 100%;
+    align-items: center;
 }
 button.btn.btn-outline-success.my-2.my-sm-0 {
     border-radius: 0;
@@ -107,6 +115,42 @@ a#link-header-left:hover {
 }
 #busca-estado {
     margin-top: 40px;
+    color: #2F230E;
+    text-align: center;
+}
+nav.navbar.fixed-top.navbar-light.bg-light {
+    position: absolute!important;
+}
+.card {
+    margin-bottom: 20px;
+    padding-top: 10px;
+}
+section#titulo-Mapa {
+    margin-top: 65px;
+    align-items: center;
+    text-align: center;
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+}
+h2#Bem-vindo-mapa {
+    align-items: center;
+    padding-top: 37px;
+    padding-left: 34%;
+}
+#Mapa-do-brasil {
+    background-image: url(images/Mapa-Brasil.png);
+    height: 600px;
+    background-clip: padding-box;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-top: -51px;
+}
+#mapa .row {
+    max-width: 90%;
+    margin-right: auto;
+    margin-left: auto;
 }
 /*-------------------------------------------------------
 Alterações em vários dispositivos!
