--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ section {
 #banner-home	{
 	color: #fff;
 	padding: 0;
+    margin-bottom: 0;
 }
 #anuncios-home {
 }
@@ -68,6 +69,7 @@ section#footer {
     padding-bottom: 0;
     position: relative;
     color: #fff;
+    margin-top: -20px;
 }
 #footer .navbar .row {
     width: 100%;
@@ -379,6 +381,78 @@ nav#caminho-home {
     margin-top: -44px;
     margin-left: 14px;
     margin-bottom: 20px;
+}
+section#sobre {
+    text-align: center;
+    background-color: #5BDB4A;
+    padding: 30px;
+}
+#sobre-eagro h3 {
+    color: #ffffff;
+}
+#sobre-eagro p {
+    color: #ffffff;
+    font-size: x-large;
+    font-weight: 600;
+    line-height: 1;
+}
+button#botao-sobre {
+    background-color: #ffffff;
+    border-color: #312512;
+    color: #312512;
+    border-radius: 15%;
+    transition: 0.5s;
+    font-weight: 600;
+}
+button#botao-sobre:hover {
+    border-color: #312512;
+    color: #fff;
+    background-color: #312512;
+}
+section#pag-sobre {
+    margin-top: 0;
+}
+section#pag-sobre .container .row div img {
+    max-width: 100%;
+    height: 400px;
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+div#sobre-1 {
+    background-color: #AED581;
+    margin-top: 94px;
+    padding: 30px;
+    color: #efefef;
+    font-size: larger;
+    font-weight: 600;
+}
+div#sobre-4 {
+    background-color: #AED581;
+    padding: 30px;
+    color: #efefef;
+    font-size: larger;
+    font-weight: 600;
+}
+section#pag-sobre {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+#sobre-2 .container .row div p {
+    padding-top: 45px;
+    font-size: large;
+}
+#sobre-3 .container .row div p {
+    padding-top: 35px;
+    font-size: large;
+}
+div#sobre-2 {
+    padding-top: 25px;
+}
+div#sobre-3 {
+    padding-top: 21px;
 }
 /*-------------------------------------------------------
 Alterações em vários dispositivos!
