Alterações no Back-end
Alterações no back end e inicio de estruturação da pagina produtos

--- a/style.css
+++ b/style.css
@@ -454,6 +454,9 @@ div#sobre-2 {
 div#sobre-3 {
     padding-top: 21px;
 }
+section#single {
+    margin-top: 200px;
+}
 /*-------------------------------------------------------
 Alterações em vários dispositivos!
 ---------------------------------------------------------*/
