Inserção do mapa
inseri o mapa e editando estrutura de produtos

--- a/style.css
+++ b/style.css
@@ -457,6 +457,9 @@ div#sobre-3 {
 section#single {
     margin-top: 200px;
 }
+.row {
+    width: 100%;
+}
 /*-------------------------------------------------------
 Alterações em vários dispositivos!
 ---------------------------------------------------------*/
