--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ h2#Bem-vindo-mapa {
     align-items: center;
     padding-top: 37px;
     padding-left: 34%;
+    float: right;
 }
 #Mapa-do-brasil {
     background-image: url(images/Mapa-Brasil.png);
@@ -468,12 +469,77 @@ div#seguranca-produto {
     padding-bottom: 20px;
 }
 div#titulo-desc-produto {
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 20px;
 }
 #single .col-md-6 .row {
     width: 100%;
     margin-right: 0;
+}
+div#titulo-logo-mapa img {
+    float: left;
+}
+div#Comentarios {
+    margin-top: 50px;
+    border: 1px solid #312512;
+    padding: 20px;
+    box-shadow: 10px 10px 16px -5px rgba(0,0,0,0.75);
+    margin-bottom: 50px;
+}
+img.pic-usu-com {
+    height: 100px;
+    padding-left: 32px;
+}
+h5#nome-usuario-comentario {
+    color: #312512;
+    padding-top: 13px;
+}
+div#Comentarios .row {
+    padding: 20px;
+}
+img.pic-usu-com {
+    height: 110px;
+    padding-left: 23px;
+}
+h3#tit-comentario {
+    color: #312512;
+}
+div#mapa-produto h2 {
+    color: #312512;
+}
+div#titulo-desc-produto h2 {
+    color: #312512;
+}
+.display-4 {
+    font-size: 2.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+    color: #312512;
+}
+div#like-prod {
+    padding-top: 56px;
+    margin-bottom: 0;
+}
+div#compartilhar-produto {
+    font-weight: 600;
+}
+p.like-label {
+    font-weight: 600;
+}
+div#compartilhar-produto p i {
+    padding-left: 20px;
+}
+img#logo {
+    width: 180px;
+}
+img#logo-mapa {
+    width: 200px;
+    margin-top: -17px;
+}
+button#btn-comentario {
+    float: right;
+    margin-top: 10px!important;
+    width: 15%;
 }
 /*-------------------------------------------------------
 Alterações em vários dispositivos!
